--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -11,6 +11,7 @@
         padding: 0 1em;
         z-index: 2;
         margin-top: -5em;
+        padding-bottom: 4em;
 
         .card {
             display: flex;
@@ -80,6 +81,115 @@
             }
         }
     }
+
+    #intro {
+        width: 100%;
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            margin: auto;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            padding: var(--padding-xl) var(--padding-md);
+
+            .graphics {
+                width: 100%;
+                height: 100%;
+                position: relative;
+                display: flex;
+                justify-content: flex-end;
+                align-items: flex-end;
+                margin-bottom: 3em;
+
+                picture {
+                    width: 90%;
+                    max-width: 360px;
+                    height: 450px;
+                    position: relative;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        left: 0;
+                        object-fit: cover;
+                        position: absolute;
+                    }
+                }
+
+                picture.abs {
+                    width: 90%;
+                    max-width: 360px;
+                    position: absolute;
+                    left: 0;
+                    top: -2em;
+
+                    img {
+                        width: 100%;
+                        height: 100%;
+                        top: 0;
+                        left: 0;
+                        object-fit: cover;
+                        position: absolute;
+                    }
+                }
+            }
+
+            .content {
+                display: flex;
+                justify-content: center;
+                align-items: flex-start;
+                flex-direction: column;
+
+                span {
+                    color: var(--main-primary-color);
+                    margin-bottom: .2em;
+                }
+
+                h2 {
+                    margin-bottom: var(--margin-sm);
+                    font-size: 2em;
+                }
+
+                p {
+                    line-height: 1.5;
+                    margin-bottom: var(--margin-md);
+                }
+
+                .btns {
+                    display: flex;
+                    justify-content: center;
+                    align-items: center;
+                    flex-wrap: wrap;
+
+                    a {
+                        box-shadow: none;
+                        margin: 0;
+                    }
+
+                    a:nth-child(2) {
+                        border: 2px solid var(--main-primary-color);
+                        position: relative;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        font-size: 1em;
+                        background-color: transparent;
+                        color: var(--main-primary-color);
+                        margin-left: .5em;
+                    }
+
+                    // a:nth-child(2) {
+                    //     background-color: white;
+                    //     color: var(--main-primary-color);
+                    // }
+                }
+            }
+        }
+    }
 }
 
 @media (min-width: 768px) {
@@ -114,6 +224,54 @@
                     p {}
 
                     img {}
+                }
+            }
+        }
+    }
+
+    #intro {
+        width: 100%;
+
+        .container {
+            width: 100%;
+            max-width: 1200px;
+            display: grid;
+            grid-template-columns: 1fr 1fr;
+            grid-gap: 1em;
+            padding-top: 5em;
+
+            .graphics {
+                align-items: flex-start;
+
+                picture {
+                    top: 2em;
+
+                    img {}
+                }
+
+                picture.abs {
+                    top: 1em;
+
+                    img {}
+                }
+            }
+
+            .content {
+
+
+                span {}
+
+                h2 {}
+
+                p {}
+
+                .btns {
+
+
+                    a {}
+
+                    a:nth-child(2) {}
+
                 }
             }
         }
